[package]
name = "work"
version = "0.1.0"
authors = ["Davey Struijk <mail@daveystruijk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.17"
serde_json = "1.0"
